--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -22,12 +22,19 @@
             </p>
         </div>
         {% endif %}
+        {% if !is_png_only %}
         <div class="mt-3">{{ q_html|safe }}</div>
-        <div class="mt-3">{{ a_html|safe }}</div>
+        {% endif %}
+        <div id="answer-content" class="mt-3">{{ a_html|safe }}</div>
         <div class="mt-3">
-            <a href="/search_results" class="btn btn-primary" autofocus>Next</a>
+            <a href="/search_results"
+               id="action-btn"
+               class="btn btn-primary"
+               data-png-only="{{ is_png_only }}"
+               autofocus>{% if is_png_only %}Next{% else %}Show Answer{% endif %}</a>
             <a href="/" class="btn btn-secondary">Home</a>
         </div>
     </div>
+    <script src="/static/js/flashcard.js"></script>
 </body>
 </html>
