Make TAB working in card (to go back to landing page with keyboard)

--- a/templates/practice.html
+++ b/templates/practice.html
@@ -32,7 +32,7 @@
                class="btn btn-primary"
                data-png-only="{{ is_png_only }}"
                autofocus>{% if is_png_only %}Next{% else %}Show Answer{% endif %}</a>
-            <a href="/" class="btn btn-secondary ml-2">Back to Filters</a>
+            <a href="/" id="back-btn" class="btn btn-secondary ml-2">Back to Filters</a>
         </div>
     </div>
     <script src="/static/js/flashcard.js"></script>
