--- a/templates/practice.html
+++ b/templates/practice.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,18 @@
     <title>rust-flashcards</title>
     <link rel='shortcut icon' href="/static/favicon.png" />
     <link rel="stylesheet" href="/static/css/default.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML" async></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML" async></script> -->
+    <script>
+        MathJax = {
+            tex: {
+                inlineMath: [['$', '$']],
+                displayMath: [['$$', '$$']]
+            }
+        };
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
 </head>
+
 <body>
     <div class="container">
         <h1 class="mt-5">Data Science</h1>
@@ -27,14 +38,12 @@
         {% endif %}
         <div id="answer-content" class="mt-3">{{ a_html|safe }}</div>
         <div class="mt-3">
-            <a href="/practice"
-               id="action-btn"
-               class="btn btn-primary"
-               data-png-only="{{ is_png_only }}"
-               autofocus>{% if is_png_only %}Next{% else %}Show Answer{% endif %}</a>
+            <a href="/practice" id="action-btn" class="btn btn-primary" data-png-only="{{ is_png_only }}" autofocus>{%
+                if is_png_only %}Next{% else %}Show Answer{% endif %}</a>
             <a href="/" id="back-btn" class="btn btn-secondary ml-2">Back to Filters</a>
         </div>
     </div>
     <script src="/static/js/flashcard.js"></script>
 </body>
+
 </html>
